@@ -1,3 +1,5 @@
+ - fix foreachelse on arrayiterators https://github.com/smarty-php/smarty/issues/506
+
 ===== 3.1.34 release ===== 05.11.2019
 13.01.2020
  - fix typo in exception message (JercSi)
